update updateUser
